2004-10-19 Andrew J. Schorr <aschorr@telemetry-investments.com>

	* ripd.c: (rip_update_interface) if connected->destination is NULL,
	  get the broadcast address with ipv4_broadcast_addr()
	* rip_interface.c: (rip_interface_multicast_set)
	  connected->destination may be NULL. Improve message if
	  setsockopt_multicast_ipv4 fails. Improve message if bind fails.
	  (rip_request_interface_send) If connected->destination is NULL,
	  get the broadcast address with ipv4_broadcast_addr().
	  (if_valid_neighbor) Handle PtP subnet addressing properly.
	  Speed up code by using prefix_match properly.

2004-10-13 Hasso Tepper <hasso at quagga.net>

	* ripd_snmp.c: Remove defaults used to initialize smux connection to
	  snmpd. Connection is initialized only if smux peer is configured.

2004-10-11 Hasso Tepper <hasso at quagga.net>

	* *.c: Make more strings const.

2004-10-08 Hasso Tepper <hasso at quagga.net>

	* *.c: Fix compiler warnings: make strings const, signed -> unsigned
	  etc.

2004-09-26 Hasso Tepper <hasso at quagga.net>

	* ripd.c: Fix compiler warning.

2004-09-23 Hasso Tepper <hasso at quagga.net>

	* *.[c|h]: list -> struct list *, listnode -> struct listnode *.

2004-09-17 Paul Jakma <paul@dishone.st>

	* ripd.c: set receive buffer to a decent size, some systems have low
	  defaults. Problem noted and fix suggested by Stephan Schweizer
	  in [zebra 20967].

2004-08-19 Paul Jakma <paul@dishone.st>

	* rip_interface.c: (rip_interface_multicast_set) get rid
	  of extraneous if_pointopoint arg. ifp is accessible via connected.
	  pass connected->ifp->ifindex to setsockopt_multicast_ipv4.
	* ripd.c: (rip_send_packet) update call to
	  rip_interface_multicast_set
	* ripd.h: update rip_interface_multicast_set prototype
	
2004-06-11 Sowmini Varadhan <sowmini.varadhan@sun.com>

	* ripd.c: (rip_distribute_update_all) distribute list hook
	  function pointer prototype requires struct prefix_list * arg.